--- a/projectsite/tracker/templates/tracker/home.html
+++ b/projectsite/tracker/templates/tracker/home.html
@@ -1,5 +1,6 @@
 {% extends 'tracker/base.html' %}
 {% load static %}
+{% load tracker_extras %}
 
 {% block title %}Home - NutriSync{% endblock %}
 
