--- a/projectsite/tracker/templates/tracker/base.html
+++ b/projectsite/tracker/templates/tracker/base.html
@@ -74,7 +74,8 @@
     <!-- Footer -->
     <footer class="bg-light text-center py-3 mt-5">
         <div class="container">
-            <p class="mb-0 text-muted">© 2024 NutriSync - Simple Food Tracking</p>
+            <p class="mb-0 text-muted">© 2025 NutriSync - Simple Food Tracking</p>
+            <p class="mb-0 text-muted">Author - Jon RichMond Vitug - Full Stack Developer</p>
         </div>
     </footer>
 
